tweak stylesheet to give bigger horizontal gap between cards - fixes S2474

--- a/public/hobothemes/clean/stylesheets/clean.css
+++ b/public/hobothemes/clean/stylesheets/clean.css
@@ -330,6 +330,6 @@ table.app-summary th { padding: 2px; border-bottom: 1px solid; background: #acd3
 
 /* kanban */
 .kb-lane {background:#eeeeee; overflow:auto;  -moz-border-radius: 5px;border-radius: 5px; padding:.5%; margin-right:.5%; float:left;  display: inline; height:600; }
-.box { background:#22ff00; font-size: 120%; padding: 1em;  margin-bottom: .5em; display:inline-block; vertical-align: top; -moz-border-radius: 5px;border-radius: 5px;}
+.box { background:#22ff00; font-size: 120%; padding: 1em .2em 1em 1em;  margin-bottom: .5em; margin-right: .6em; display:inline-block; vertical-align: top; -moz-border-radius: 5px;border-radius: 5px;}
 .kb-frame {background:#eeeeee; width:98%; overflow:auto;  -moz-border-radius: 5px;border-radius: 5px; padding:.5%; margin:.5%; float:left;  display: inline; height:600; }
 
